yaml_manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minimallm-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minimallm-frontend
  template:
    metadata:
      labels:
        app: minimallm-frontend
    spec:
      containers:
        - name: minimallm-frontend # Ensure this is lowercase
          image: minimallm-frontend:latest # <-- Use the image name loaded into minikube
          imagePullPolicy: IfNotPresent # <-- Add this line
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: minimallm-frontend
spec:
  selector:
    app: minimallm-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
